@@ -640,195 +640,195 @@ $language_data = array (
 	),
 	'STYLES' => array(
 		'KEYWORDS' => array(
-			1 => 'color: #b1b100;',
+			1 => 'color: #000000;  font-weight: bold;',
 			2 => 'color: #000000; font-weight: bold;',
-			3 => 'color: #993333;',
-			4 => 'color: #b13366;',
-			5 => 'color: #aaaadd; font-weight: bold;',
-			6 => 'color: #aaaadd; font-weight: bold;',
-			7 => 'color: #aaaadd; font-weight: bold;',
-			8 => 'color: #aaaadd; font-weight: bold;',
-			9 => 'color: #aaaadd; font-weight: bold;',
-			10 => 'color: #aaaadd; font-weight: bold;',
-			11 => 'color: #aaaadd; font-weight: bold;',
-			12 => 'color: #aaaadd; font-weight: bold;',
-			13 => 'color: #aaaadd; font-weight: bold;',
-			14 => 'color: #aaaadd; font-weight: bold;',
-			15 => 'color: #aaaadd; font-weight: bold;',
-			16 => 'color: #aaaadd; font-weight: bold;',
-			17 => 'color: #aaaadd; font-weight: bold;',
-			18 => 'color: #aaaadd; font-weight: bold;',
-			19 => 'color: #aaaadd; font-weight: bold;',
-			20 => 'color: #aaaadd; font-weight: bold;',
-			21 => 'color: #aaaadd; font-weight: bold;',
-			22 => 'color: #aaaadd; font-weight: bold;',
-			23 => 'color: #aaaadd; font-weight: bold;',
-			24 => 'color: #aaaadd; font-weight: bold;',
-			25 => 'color: #aaaadd; font-weight: bold;',
-			26 => 'color: #aaaadd; font-weight: bold;',
-			27 => 'color: #aaaadd; font-weight: bold;',
-			28 => 'color: #aaaadd; font-weight: bold;',
-			29 => 'color: #aaaadd; font-weight: bold;',
-			30 => 'color: #aaaadd; font-weight: bold;',
-			31 => 'color: #aaaadd; font-weight: bold;',
-			32 => 'color: #aaaadd; font-weight: bold;',
-			33 => 'color: #aaaadd; font-weight: bold;',
-			34 => 'color: #aaaadd; font-weight: bold;',
-			35 => 'color: #aaaadd; font-weight: bold;',
-			36 => 'color: #aaaadd; font-weight: bold;',
-			37 => 'color: #aaaadd; font-weight: bold;',
-			38 => 'color: #aaaadd; font-weight: bold;',
-			39 => 'color: #aaaadd; font-weight: bold;',
-			40 => 'color: #aaaadd; font-weight: bold;',
-			41 => 'color: #aaaadd; font-weight: bold;',
-			42 => 'color: #aaaadd; font-weight: bold;',
-			43 => 'color: #aaaadd; font-weight: bold;',
-			44 => 'color: #aaaadd; font-weight: bold;',
-			45 => 'color: #aaaadd; font-weight: bold;',
-			46 => 'color: #aaaadd; font-weight: bold;',
-			47 => 'color: #aaaadd; font-weight: bold;',
-			48 => 'color: #aaaadd; font-weight: bold;',
-			49 => 'color: #aaaadd; font-weight: bold;',
-			50 => 'color: #aaaadd; font-weight: bold;',
-			51 => 'color: #aaaadd; font-weight: bold;',
-			52 => 'color: #aaaadd; font-weight: bold;',
-			53 => 'color: #aaaadd; font-weight: bold;',
-			54 => 'color: #aaaadd; font-weight: bold;',
-			55 => 'color: #aaaadd; font-weight: bold;',
-			56 => 'color: #aaaadd; font-weight: bold;',
-			57 => 'color: #aaaadd; font-weight: bold;',
-			58 => 'color: #aaaadd; font-weight: bold;',
-			59 => 'color: #aaaadd; font-weight: bold;',
-			60 => 'color: #aaaadd; font-weight: bold;',
-			61 => 'color: #aaaadd; font-weight: bold;',
-			62 => 'color: #aaaadd; font-weight: bold;',
-			63 => 'color: #aaaadd; font-weight: bold;',
-			64 => 'color: #aaaadd; font-weight: bold;',
-			65 => 'color: #aaaadd; font-weight: bold;',
-			66 => 'color: #aaaadd; font-weight: bold;',
-			67 => 'color: #aaaadd; font-weight: bold;',
-			68 => 'color: #aaaadd; font-weight: bold;',
-			69 => 'color: #aaaadd; font-weight: bold;',
-			70 => 'color: #aaaadd; font-weight: bold;',
-			71 => 'color: #aaaadd; font-weight: bold;',
-			72 => 'color: #aaaadd; font-weight: bold;',
-			73 => 'color: #aaaadd; font-weight: bold;',
-			74 => 'color: #aaaadd; font-weight: bold;',
-			75 => 'color: #aaaadd; font-weight: bold;',
-			76 => 'color: #aaaadd; font-weight: bold;',
-			77 => 'color: #aaaadd; font-weight: bold;',
-			78 => 'color: #aaaadd; font-weight: bold;',
-			79 => 'color: #aaaadd; font-weight: bold;',
-			80 => 'color: #aaaadd; font-weight: bold;',
-			81 => 'color: #aaaadd; font-weight: bold;',
-			82 => 'color: #aaaadd; font-weight: bold;',
-			83 => 'color: #aaaadd; font-weight: bold;',
-			84 => 'color: #aaaadd; font-weight: bold;',
-			85 => 'color: #aaaadd; font-weight: bold;',
-			86 => 'color: #aaaadd; font-weight: bold;',
-			87 => 'color: #aaaadd; font-weight: bold;',
-			88 => 'color: #aaaadd; font-weight: bold;',
-			89 => 'color: #aaaadd; font-weight: bold;',
-			90 => 'color: #aaaadd; font-weight: bold;',
-			91 => 'color: #aaaadd; font-weight: bold;',
-			92 => 'color: #aaaadd; font-weight: bold;',
-			93 => 'color: #aaaadd; font-weight: bold;',
-			94 => 'color: #aaaadd; font-weight: bold;',
-			95 => 'color: #aaaadd; font-weight: bold;',
-			96 => 'color: #aaaadd; font-weight: bold;',
-			97 => 'color: #aaaadd; font-weight: bold;',
-			98 => 'color: #aaaadd; font-weight: bold;',
-			99 => 'color: #aaaadd; font-weight: bold;',
-			100 => 'color: #aaaadd; font-weight: bold;',
-			101 => 'color: #aaaadd; font-weight: bold;',
-			102 => 'color: #aaaadd; font-weight: bold;',
-			103 => 'color: #aaaadd; font-weight: bold;',
-			104 => 'color: #aaaadd; font-weight: bold;',
-			105 => 'color: #aaaadd; font-weight: bold;',
-			106 => 'color: #aaaadd; font-weight: bold;',
-			107 => 'color: #aaaadd; font-weight: bold;',
-			108 => 'color: #aaaadd; font-weight: bold;',
-			109 => 'color: #aaaadd; font-weight: bold;',
-			110 => 'color: #aaaadd; font-weight: bold;',
-			111 => 'color: #aaaadd; font-weight: bold;',
-			112 => 'color: #aaaadd; font-weight: bold;',
-			113 => 'color: #aaaadd; font-weight: bold;',
-			114 => 'color: #aaaadd; font-weight: bold;',
-			115 => 'color: #aaaadd; font-weight: bold;',
-			116 => 'color: #aaaadd; font-weight: bold;',
-			117 => 'color: #aaaadd; font-weight: bold;',
-			118 => 'color: #aaaadd; font-weight: bold;',
-			119 => 'color: #aaaadd; font-weight: bold;',
-			120 => 'color: #aaaadd; font-weight: bold;',
-			121 => 'color: #aaaadd; font-weight: bold;',
-			122 => 'color: #aaaadd; font-weight: bold;',
-			123 => 'color: #aaaadd; font-weight: bold;',
-			124 => 'color: #aaaadd; font-weight: bold;',
-			125 => 'color: #aaaadd; font-weight: bold;',
-			126 => 'color: #aaaadd; font-weight: bold;',
-			127 => 'color: #aaaadd; font-weight: bold;',
-			128 => 'color: #aaaadd; font-weight: bold;',
-			129 => 'color: #aaaadd; font-weight: bold;',
-			130 => 'color: #aaaadd; font-weight: bold;',
-			131 => 'color: #aaaadd; font-weight: bold;',
-			132 => 'color: #aaaadd; font-weight: bold;',
-			133 => 'color: #aaaadd; font-weight: bold;',
-			134 => 'color: #aaaadd; font-weight: bold;',
-			135 => 'color: #aaaadd; font-weight: bold;',
-			136 => 'color: #aaaadd; font-weight: bold;',
-			137 => 'color: #aaaadd; font-weight: bold;',
-			138 => 'color: #aaaadd; font-weight: bold;',
-			139 => 'color: #aaaadd; font-weight: bold;',
-			140 => 'color: #aaaadd; font-weight: bold;',
-			141 => 'color: #aaaadd; font-weight: bold;',
-			142 => 'color: #aaaadd; font-weight: bold;',
-			143 => 'color: #aaaadd; font-weight: bold;',
-			144 => 'color: #aaaadd; font-weight: bold;',
-			145 => 'color: #aaaadd; font-weight: bold;',
-			146 => 'color: #aaaadd; font-weight: bold;',
-			147 => 'color: #aaaadd; font-weight: bold;',
-			148 => 'color: #aaaadd; font-weight: bold;',
-			149 => 'color: #aaaadd; font-weight: bold;',
-			150 => 'color: #aaaadd; font-weight: bold;',
-			151 => 'color: #aaaadd; font-weight: bold;',
-			152 => 'color: #aaaadd; font-weight: bold;',
-			153 => 'color: #aaaadd; font-weight: bold;',
-			154 => 'color: #aaaadd; font-weight: bold;',
-			155 => 'color: #aaaadd; font-weight: bold;',
-			156 => 'color: #aaaadd; font-weight: bold;',
-			157 => 'color: #aaaadd; font-weight: bold;',
-			158 => 'color: #aaaadd; font-weight: bold;',
-			159 => 'color: #aaaadd; font-weight: bold;',
-			160 => 'color: #aaaadd; font-weight: bold;',
-			161 => 'color: #aaaadd; font-weight: bold;',
-			162 => 'color: #aaaadd; font-weight: bold;',
-			163 => 'color: #aaaadd; font-weight: bold;',
-			164 => 'color: #aaaadd; font-weight: bold;',
-			165 => 'color: #aaaadd; font-weight: bold;',
-			166 => 'color: #aaaadd; font-weight: bold;'
+			3 => 'color: #006600; font-weight: bold;',
+			4 => 'color: #006600; font-weight: bold;',
+			5 => 'color: #003399; font-weight: bold;',
+			6 => 'color: #003399; font-weight: bold;',
+			7 => 'color: #003399; font-weight: bold;',
+			8 => 'color: #003399; font-weight: bold;',
+			9 => 'color: #003399; font-weight: bold;',
+			10 => 'color: #003399; font-weight: bold;',
+			11 => 'color: #003399; font-weight: bold;',
+			12 => 'color: #003399; font-weight: bold;',
+			13 => 'color: #003399; font-weight: bold;',
+			14 => 'color: #003399; font-weight: bold;',
+			15 => 'color: #003399; font-weight: bold;',
+			16 => 'color: #003399; font-weight: bold;',
+			17 => 'color: #003399; font-weight: bold;',
+			18 => 'color: #003399; font-weight: bold;',
+			19 => 'color: #003399; font-weight: bold;',
+			20 => 'color: #003399; font-weight: bold;',
+			21 => 'color: #003399; font-weight: bold;',
+			22 => 'color: #003399; font-weight: bold;',
+			23 => 'color: #003399; font-weight: bold;',
+			24 => 'color: #003399; font-weight: bold;',
+			25 => 'color: #003399; font-weight: bold;',
+			26 => 'color: #003399; font-weight: bold;',
+			27 => 'color: #003399; font-weight: bold;',
+			28 => 'color: #003399; font-weight: bold;',
+			29 => 'color: #003399; font-weight: bold;',
+			30 => 'color: #003399; font-weight: bold;',
+			31 => 'color: #003399; font-weight: bold;',
+			32 => 'color: #003399; font-weight: bold;',
+			33 => 'color: #003399; font-weight: bold;',
+			34 => 'color: #003399; font-weight: bold;',
+			35 => 'color: #003399; font-weight: bold;',
+			36 => 'color: #003399; font-weight: bold;',
+			37 => 'color: #003399; font-weight: bold;',
+			38 => 'color: #003399; font-weight: bold;',
+			39 => 'color: #003399; font-weight: bold;',
+			40 => 'color: #003399; font-weight: bold;',
+			41 => 'color: #003399; font-weight: bold;',
+			42 => 'color: #003399; font-weight: bold;',
+			43 => 'color: #003399; font-weight: bold;',
+			44 => 'color: #003399; font-weight: bold;',
+			45 => 'color: #003399; font-weight: bold;',
+			46 => 'color: #003399; font-weight: bold;',
+			47 => 'color: #003399; font-weight: bold;',
+			48 => 'color: #003399; font-weight: bold;',
+			49 => 'color: #003399; font-weight: bold;',
+			50 => 'color: #003399; font-weight: bold;',
+			51 => 'color: #003399; font-weight: bold;',
+			52 => 'color: #003399; font-weight: bold;',
+			53 => 'color: #003399; font-weight: bold;',
+			54 => 'color: #003399; font-weight: bold;',
+			55 => 'color: #003399; font-weight: bold;',
+			56 => 'color: #003399; font-weight: bold;',
+			57 => 'color: #003399; font-weight: bold;',
+			58 => 'color: #003399; font-weight: bold;',
+			59 => 'color: #003399; font-weight: bold;',
+			60 => 'color: #003399; font-weight: bold;',
+			61 => 'color: #003399; font-weight: bold;',
+			62 => 'color: #003399; font-weight: bold;',
+			63 => 'color: #003399; font-weight: bold;',
+			64 => 'color: #003399; font-weight: bold;',
+			65 => 'color: #003399; font-weight: bold;',
+			66 => 'color: #003399; font-weight: bold;',
+			67 => 'color: #003399; font-weight: bold;',
+			68 => 'color: #003399; font-weight: bold;',
+			69 => 'color: #003399; font-weight: bold;',
+			70 => 'color: #003399; font-weight: bold;',
+			71 => 'color: #003399; font-weight: bold;',
+			72 => 'color: #003399; font-weight: bold;',
+			73 => 'color: #003399; font-weight: bold;',
+			74 => 'color: #003399; font-weight: bold;',
+			75 => 'color: #003399; font-weight: bold;',
+			76 => 'color: #003399; font-weight: bold;',
+			77 => 'color: #003399; font-weight: bold;',
+			78 => 'color: #003399; font-weight: bold;',
+			79 => 'color: #003399; font-weight: bold;',
+			80 => 'color: #003399; font-weight: bold;',
+			81 => 'color: #003399; font-weight: bold;',
+			82 => 'color: #003399; font-weight: bold;',
+			83 => 'color: #003399; font-weight: bold;',
+			84 => 'color: #003399; font-weight: bold;',
+			85 => 'color: #003399; font-weight: bold;',
+			86 => 'color: #003399; font-weight: bold;',
+			87 => 'color: #003399; font-weight: bold;',
+			88 => 'color: #003399; font-weight: bold;',
+			89 => 'color: #003399; font-weight: bold;',
+			90 => 'color: #003399; font-weight: bold;',
+			91 => 'color: #003399; font-weight: bold;',
+			92 => 'color: #003399; font-weight: bold;',
+			93 => 'color: #003399; font-weight: bold;',
+			94 => 'color: #003399; font-weight: bold;',
+			95 => 'color: #003399; font-weight: bold;',
+			96 => 'color: #003399; font-weight: bold;',
+			97 => 'color: #003399; font-weight: bold;',
+			98 => 'color: #003399; font-weight: bold;',
+			99 => 'color: #003399; font-weight: bold;',
+			100 => 'color: #003399; font-weight: bold;',
+			101 => 'color: #003399; font-weight: bold;',
+			102 => 'color: #003399; font-weight: bold;',
+			103 => 'color: #003399; font-weight: bold;',
+			104 => 'color: #003399; font-weight: bold;',
+			105 => 'color: #003399; font-weight: bold;',
+			106 => 'color: #003399; font-weight: bold;',
+			107 => 'color: #003399; font-weight: bold;',
+			108 => 'color: #003399; font-weight: bold;',
+			109 => 'color: #003399; font-weight: bold;',
+			110 => 'color: #003399; font-weight: bold;',
+			111 => 'color: #003399; font-weight: bold;',
+			112 => 'color: #003399; font-weight: bold;',
+			113 => 'color: #003399; font-weight: bold;',
+			114 => 'color: #003399; font-weight: bold;',
+			115 => 'color: #003399; font-weight: bold;',
+			116 => 'color: #003399; font-weight: bold;',
+			117 => 'color: #003399; font-weight: bold;',
+			118 => 'color: #003399; font-weight: bold;',
+			119 => 'color: #003399; font-weight: bold;',
+			120 => 'color: #003399; font-weight: bold;',
+			121 => 'color: #003399; font-weight: bold;',
+			122 => 'color: #003399; font-weight: bold;',
+			123 => 'color: #003399; font-weight: bold;',
+			124 => 'color: #003399; font-weight: bold;',
+			125 => 'color: #003399; font-weight: bold;',
+			126 => 'color: #003399; font-weight: bold;',
+			127 => 'color: #003399; font-weight: bold;',
+			128 => 'color: #003399; font-weight: bold;',
+			129 => 'color: #003399; font-weight: bold;',
+			130 => 'color: #003399; font-weight: bold;',
+			131 => 'color: #003399; font-weight: bold;',
+			132 => 'color: #003399; font-weight: bold;',
+			133 => 'color: #003399; font-weight: bold;',
+			134 => 'color: #003399; font-weight: bold;',
+			135 => 'color: #003399; font-weight: bold;',
+			136 => 'color: #003399; font-weight: bold;',
+			137 => 'color: #003399; font-weight: bold;',
+			138 => 'color: #003399; font-weight: bold;',
+			139 => 'color: #003399; font-weight: bold;',
+			140 => 'color: #003399; font-weight: bold;',
+			141 => 'color: #003399; font-weight: bold;',
+			142 => 'color: #003399; font-weight: bold;',
+			143 => 'color: #003399; font-weight: bold;',
+			144 => 'color: #003399; font-weight: bold;',
+			145 => 'color: #003399; font-weight: bold;',
+			146 => 'color: #003399; font-weight: bold;',
+			147 => 'color: #003399; font-weight: bold;',
+			148 => 'color: #003399; font-weight: bold;',
+			149 => 'color: #003399; font-weight: bold;',
+			150 => 'color: #003399; font-weight: bold;',
+			151 => 'color: #003399; font-weight: bold;',
+			152 => 'color: #003399; font-weight: bold;',
+			153 => 'color: #003399; font-weight: bold;',
+			154 => 'color: #003399; font-weight: bold;',
+			155 => 'color: #003399; font-weight: bold;',
+			156 => 'color: #003399; font-weight: bold;',
+			157 => 'color: #003399; font-weight: bold;',
+			158 => 'color: #003399; font-weight: bold;',
+			159 => 'color: #003399; font-weight: bold;',
+			160 => 'color: #003399; font-weight: bold;',
+			161 => 'color: #003399; font-weight: bold;',
+			162 => 'color: #003399; font-weight: bold;',
+			163 => 'color: #003399; font-weight: bold;',
+			164 => 'color: #003399; font-weight: bold;',
+			165 => 'color: #003399; font-weight: bold;',
+			166 => 'color: #003399; font-weight: bold;'
 			),
 		'COMMENTS' => array(
-			1 => 'color: #808080; font-style: italic;',
-			'MULTI' => 'color: #808080; font-style: italic;'
+			1 => 'color: #666666; font-style: italic;',
+			'MULTI' => 'color: #666666; font-style: italic;'
 			),
 		'ESCAPE_CHAR' => array(
 			0 => 'color: #000099; font-weight: bold;'
 			),
 		'BRACKETS' => array(
-			0 => 'color: #66cc66;'
+			0 => 'color: #009900;'
 			),
 		'STRINGS' => array(
-			0 => 'color: #ff0000;'
+			0 => 'color: #0000ff;'
 			),
 		'NUMBERS' => array(
 			0 => 'color: #cc66cc;'
 			),
 		'METHODS' => array(
-			1 => 'color: #006600;',
-			2 => 'color: #006600;'
+			1 => 'color: #006633;',
+			2 => 'color: #006633;'
 			),
 		'SYMBOLS' => array(
-			0 => 'color: #66cc66;'
+			0 => 'color: #339933;'
 			),
 		'SCRIPT' => array(
 			),
